-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 12
-
Component/s: hotspot
-
b12
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8238701 | 11.0.7 | Ioi Lam | P2 | Resolved | Fixed | b03 |
Mach5 job:
runtime/appcds/cacheObject/DifferentHeapSizes.java
Test log:
----------System.err:(52/3473)----------
stdout: [[0.024s][info][cds] CDS archive was created with max heap size = 128M, and the following configuration:
[0.024s][info][cds] narrow_klass_base = 0x0000000800000000, narrow_klass_shift = 3
[0.024s][info][cds] narrow_oop_mode = 1, narrow_oop_base = 0x0000000000000000, narrow_oop_shift = 3
[0.024s][info][cds] The current max heap size = 16376M, HeapRegion::GrainBytes = 4194304
[0.024s][info][cds] narrow_klass_base = 0x0000000800000000, narrow_klass_shift = 3
[0.024s][info][cds] narrow_oop_mode = 1, narrow_oop_base = 0x0000000000000000, narrow_oop_shift = 3
[0.024s][info][cds] CDS heap data need to be relocated because
[0.024s][info][cds] the desired range 0x0000000119200000 - 0x0000000119368000
[0.024s][info][cds] is outside of the heap 0x0000000400800000 - 0x0000000800000000
[0.024s][info][cds] CDS heap data relocation delta = 29639049216 bytes
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/filemap.cpp:982
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/scratch/mesos/slaves/14a03e04-9f3c-408e-8ddf-efd6aa9b759f-S94137/frameworks/14a03e04-9f3c-408e-8ddf-efd6aa9b759f-0005/executors/a7f022f6-b379-41fd-92a3-584952738cb0/runs/f602375a-be7f-46a4-9a65-be48a7beb4e2/workspace/open/src/hotspot/share/memory/filemap.cpp:982), pid=69518, tid=4867
# assert(is_aligned(relocated_strings_bottom + delta, HeapRegion::GrainBytes)) failed: must be
#
# JRE version: (12.0) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 12-internal+0-jdk12-jdk.372, mixed mode, aot, sharing, tiered, compressed oops, g1 gc, bsd-amd64)
# Core dump will be written. Default location: /cores/core.69518 (max size 18014398509481983 kB). To ensure a full core dump, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /scratch/mesos/slaves/14a03e04-9f3c-408e-8ddf-efd6aa9b759f-S85737/frameworks/14a03e04-9f3c-408e-8ddf-efd6aa9b759f-0005/executors/ea775a54-33c4-4947-af1d-96fb91f607e3/runs/3b4cffce-b582-4680-87c9-57d6e03d38ec/testoutput/jtreg/JTwork/scratch/0/hs_err_pid69518.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Current thread is 4867
Dumping core ...
];
stderr: []
exitValue = 134
java.lang.RuntimeException: 'Hello World' missing from stdout/stderr
at jdk.test.lib.process.OutputAnalyzer.shouldContain(OutputAnalyzer.java:151)
at jdk.test.lib.cds.CDSTestUtils.checkMatches(CDSTestUtils.java:456)
at jdk.test.lib.cds.CDSTestUtils$Result.assertNormalExit(CDSTestUtils.java:191)
at DifferentHeapSizes.main(DifferentHeapSizes.java:77)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:566)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:834)
JavaTest Message: Test threw exception: java.lang.RuntimeException: 'Hello World' missing from stdout/stderr
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.RuntimeException: 'Hello World' missing from stdout/stderr
runtime/appcds/cacheObject/DifferentHeapSizes.java
Test log:
----------System.err:(52/3473)----------
stdout: [[0.024s][info][cds] CDS archive was created with max heap size = 128M, and the following configuration:
[0.024s][info][cds] narrow_klass_base = 0x0000000800000000, narrow_klass_shift = 3
[0.024s][info][cds] narrow_oop_mode = 1, narrow_oop_base = 0x0000000000000000, narrow_oop_shift = 3
[0.024s][info][cds] The current max heap size = 16376M, HeapRegion::GrainBytes = 4194304
[0.024s][info][cds] narrow_klass_base = 0x0000000800000000, narrow_klass_shift = 3
[0.024s][info][cds] narrow_oop_mode = 1, narrow_oop_base = 0x0000000000000000, narrow_oop_shift = 3
[0.024s][info][cds] CDS heap data need to be relocated because
[0.024s][info][cds] the desired range 0x0000000119200000 - 0x0000000119368000
[0.024s][info][cds] is outside of the heap 0x0000000400800000 - 0x0000000800000000
[0.024s][info][cds] CDS heap data relocation delta = 29639049216 bytes
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/filemap.cpp:982
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/scratch/mesos/slaves/14a03e04-9f3c-408e-8ddf-efd6aa9b759f-S94137/frameworks/14a03e04-9f3c-408e-8ddf-efd6aa9b759f-0005/executors/a7f022f6-b379-41fd-92a3-584952738cb0/runs/f602375a-be7f-46a4-9a65-be48a7beb4e2/workspace/open/src/hotspot/share/memory/filemap.cpp:982), pid=69518, tid=4867
# assert(is_aligned(relocated_strings_bottom + delta, HeapRegion::GrainBytes)) failed: must be
#
# JRE version: (12.0) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 12-internal+0-jdk12-jdk.372, mixed mode, aot, sharing, tiered, compressed oops, g1 gc, bsd-amd64)
# Core dump will be written. Default location: /cores/core.69518 (max size 18014398509481983 kB). To ensure a full core dump, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /scratch/mesos/slaves/14a03e04-9f3c-408e-8ddf-efd6aa9b759f-S85737/frameworks/14a03e04-9f3c-408e-8ddf-efd6aa9b759f-0005/executors/ea775a54-33c4-4947-af1d-96fb91f607e3/runs/3b4cffce-b582-4680-87c9-57d6e03d38ec/testoutput/jtreg/JTwork/scratch/0/hs_err_pid69518.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Current thread is 4867
Dumping core ...
];
stderr: []
exitValue = 134
java.lang.RuntimeException: 'Hello World' missing from stdout/stderr
at jdk.test.lib.process.OutputAnalyzer.shouldContain(OutputAnalyzer.java:151)
at jdk.test.lib.cds.CDSTestUtils.checkMatches(CDSTestUtils.java:456)
at jdk.test.lib.cds.CDSTestUtils$Result.assertNormalExit(CDSTestUtils.java:191)
at DifferentHeapSizes.main(DifferentHeapSizes.java:77)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:566)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:834)
JavaTest Message: Test threw exception: java.lang.RuntimeException: 'Hello World' missing from stdout/stderr
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.RuntimeException: 'Hello World' missing from stdout/stderr
- backported by
-
JDK-8238701 runtime/appcds/cacheObject/DifferentHeapSizes.java crash
-
- Resolved
-
- relates to
-
JDK-8208658 Make CDS archived heap regions usable even if compressed oop encoding has changed
-
- Resolved
-