8210523: runtime/appcds/cacheObject/DifferentHeapSizes.java crash

Reviewed-by: jiangli, ccheung